# clangaroo

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/test_project/: hello.cpp  hello.h  main.cpp
mcp_clangd/: __init__.py  __main__.py  ai_cache.py  backend.py  cache.py  clangd_manager.py  config.py  context_provider.py  daemon.py  daemon_wrapper.py  index_warmup.py  llm_provider.py  lsp_client.py  lsp_methods.py  proxy.py  server.py  session.py  tree_sitter_manager.py  utils.py
mcp_clangd/providers/: __init__.py  gemini_provider.py
