[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clangaroo"
version = "0.1.0"
description = "🦘 Clangaroo - MCP server that helps Claude jump around C++ codebases via clangd"
authors = [{name = "Jason de Koning & Claude", email = "jason@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.2.0",
    "pygls>=1.3.0", 
    "aiosqlite>=0.19.0",
    "click>=8.0",
    "watchdog>=3.0",
    # AI Features Dependencies
    "langchain-google-genai>=2.0.0",
    "google-generativeai>=0.7.0,<0.9.0",
    "aiofiles>=24.1.0",
    # Tree-sitter Dependencies for Ultra-Fast Syntax Analysis
    "tree-sitter>=0.20.0",
    "tree-sitter-cpp>=0.20.0",
    "tree-sitter-c>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-benchmark>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "coverage>=7.0",
]

[project.scripts]
clangaroo = "mcp_clangd.__main__:main"
mcp-clangd = "mcp_clangd.__main__:main"  # Keep backward compatibility

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_clangd*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["mcp_clangd"]
omit = ["tests/*"]